Fix tree-sitter integration